--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
 		"mongodb": "^5.7.0",
 		"mongoose": "^7.3.4",
 		"nodemon": "^3.0.1",
-		"uuid": "^9.0.0"
+		"uuid": "^9.0.0",
+		"validator": "^13.9.0"
 	}
 }
