--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,10 @@
 		"jsonwebtoken": "^9.0.1",
 		"mongodb": "^5.7.0",
 		"mongoose": "^7.3.4",
-		"nodemon": "^3.0.1",
 		"uuid": "^9.0.0",
 		"validator": "^13.9.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.1"
 	}
 }
