--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,8 @@
 		"mongodb": "^5.7.0",
 		"mongoose": "^7.3.4",
 		"uuid": "^9.0.0",
-		"validator": "^13.9.0"
-	},
-	"devDependencies": {
+		"validator": "^13.9.0",
 		"nodemon": "^3.0.1"
-	}
+	},
+	"devDependencies": {}
 }
